--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.7",
     "@radix-ui/react-icons": "^1.3.0",
     "alert": "^6.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "next": "14.2.5",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
